vlib/v/checker/tests/generic_fn_array_param_not_infer_type_err.vv
import arrays

arrays.sum([]) or { panic(err) }
